# easymcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
frontend/: .prettierrc  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: index.ts
frontend/src/components/api-keys/: api-key-card.tsx  api-key-deletion-dialog.tsx  api-key-generation-dialog.tsx  api-key-list-item.tsx  index.ts
frontend/src/components/auth/: login-form.tsx  require-auth.tsx
frontend/src/hooks/: use-api-queries.ts  use-auth.ts  use-code-examples.ts  use-generic-mutations.ts  use-server-selection.ts  use-system-query.ts  use-visibility.ts
frontend/src/lib/: api.ts  design-system.ts  env.ts  form-schemas.ts  formatters.ts  icons.ts  polling-config.ts  status.ts  utils.ts
frontend/src/types/: errors.ts  index.ts
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 1701a6cbb100_initial_migration.py
scripts/: migrate.py
src/easymcp/: __init__.py  __main__.py  config.py  lifespan.py  models.py  state.py
src/easymcp/api/: auth.py  dependencies.py  main.py  middleware.py
src/easymcp/core/: database.py  errors.py  graceful_shutdown.py  migration.py  performance_monitor.py  server_lifecycle.py  server_manager.py  server_params.py
src/easymcp/mcp_stack/: capability_handlers.py  proxy.py  server.py
src/easymcp/services/: __init__.py  auth_service.py  config_service.py  metrics_service.py  server_service.py
(+49 files in other folders)
